Fix handle overflow

--- a/ui/scss/component/_main.scss
+++ b/ui/scss/component/_main.scss
@@ -1136,6 +1136,39 @@ body {
       width: unset; // It was being set to '100%' at the base level.
     }
   }
+
+  .claim-preview {
+    .claim-preview__text {
+      overflow: hidden;
+    }
+    .claim-preview-metadata {
+      .claim-tile__info {
+        .media__subtitle {
+          width: calc(100% - 2.1rem);
+          .button {
+            display: inline;
+            @media (max-width: $breakpoint-small) {
+              .button__content {
+                width: 100%;
+                .channel-name {
+                  width: 100%;
+                  p {
+                    width: 99%;
+                    white-space: nowrap;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                  }
+                }
+              }
+            }
+          }
+          span:not(.channel-name) {
+            font-size: var(--font-xsmall);
+          }
+        }
+      }
+    }
+  }
 }
 
 // Temp hacks until 'section__actions--no-margin' is generic again.
